--- a/menu.html
+++ b/menu.html
@@ -40,52 +40,52 @@
   <body>
 
     <!--Navbar Section-->
-    <!-- Search Icon (Expands when clicked with cancel button) -->
-    <!-- Scrolling categories -->
     <!-- Option to nav by cuisine -->
+    <!-- Search Icon (Expands when clicked with cancel button) -->
+    <!-- Indicator that user can scroll -->
+    <!-- If scroll to overflow category, scroll to it -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cookout John</a>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('breakfast')">Breakfast</a>
+              <a class="nav-link" id="nav-breakfast" onclick="jump('breakfast')">Breakfast</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('appetizer')">Appetizer</a>
+              <a class="nav-link" id="nav-appetizer" onclick="jump('appetizer')">Appetizer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('noodle')">Noodle</a>
+              <a class="nav-link" id="nav-noodle" onclick="jump('noodle')">Noodle</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('chicken')">Chicken</a>
+              <a class="nav-link" id="nav-chicken" onclick="jump('chicken')">Chicken</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('beef')">Beef</a>
+              <a class="nav-link" id="nav-beef" onclick="jump('beef')">Beef</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('pork')">Pork</a>
+              <a class="nav-link" id="nav-pork" onclick="jump('pork')">Pork</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('seafood')">Seafood</a>
+              <a class="nav-link" id="nav-seafood" onclick="jump('seafood')">Seafood</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('vegetable')">Vegetable</a>
+              <a class="nav-link" id="nav-vegetable" onclick="jump('vegetable')">Vegetable</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('pie')">Pie</a>
+              <a class="nav-link" id="nav-pie" onclick="jump('pie')">Pie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('sandwich')">Sandwich</a>
+              <a class="nav-link" id="nav-sandwich" onclick="jump('sandwich')">Sandwich</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('sides')">Sides</a>
+              <a class="nav-link" id="nav-sides" onclick="jump('sides')">Sides</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('sauce')">Sauce</a>
+              <a class="nav-link" id="nav-sauce" onclick="jump('sauce')">Sauce</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="jump('dessert')">Dessert</a>
+              <a class="nav-link" id="nav-dessert" onclick="jump('dessert')">Dessert</a>
             </li>
           </ul>
         </div>
