--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
     <!-- Option to nav by cuisine -->
     <!-- Search Icon (Expands when clicked with cancel button) -->
     <!-- Indicator that user can scroll -->
-    <!-- If scroll to overflow category, scroll to it -->
+    <!-- If jumping, dont update categories in between -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNav">
