--- a/menu.html
+++ b/menu.html
@@ -43,9 +43,9 @@
     <!-- Option to nav by cuisine -->
     <!-- Search Icon (Expands when clicked with cancel button) -->
     <!-- Indicator that user can scroll -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" id="nav-breakfast" onclick="jump('breakfast')">Breakfast</a>
