Toggle search bar

--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,14 @@
     <!--Navbar Section-->
     <nav class="navbar navbar-expand navbar-light bg-light sticky-top">
       <div class="container-fluid">
+        
+        <div class="search-container" id="search-container" onclick="toggleSearch()">
+          <input type="text" class="search-input" id="search-input" placeholder="Search...">
+          <div class="search-icon" >
+            <i class="fas fa-search"></i>
+          </div>
+        </div>
+
         <div class="navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
