Search bar close

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
         
         <div class="search-container" id="search-container" onclick="toggleSearch()">
           <input type="text" class="search-input" id="search-input" placeholder="Search...">
-          <div class="search-icon" >
+          <div id="search-icon" >
             <i class="fas fa-search"></i>
           </div>
         </div>
