Redesigned search funtionality

--- a/menu.html
+++ b/menu.html
@@ -43,9 +43,9 @@
     <nav class="navbar navbar-expand navbar-light bg-light sticky-top">
       <div class="container-fluid">
         
-        <div class="search-container" id="search-container" onclick="toggleSearch()">
+        <div class="search-container" id="search-container">
           <input type="text" class="search-input" id="search-input" placeholder="Search...">
-          <div id="search-icon" >
+          <div class="search-icon" onclick="toggleSearch()">
             <i class="fas fa-search"></i>
           </div>
         </div>
