Max widths for content

--- a/menu.html
+++ b/menu.html
@@ -99,20 +99,12 @@
     <!--Food Section-->
     <div class="container">
       <div id="menu-container"></div>
-    </div>
-
-    <!--Footer Section-->
-    <footer>
-      <br />
-      <div class="container align-items-center justify-content-center">
-        <div class="row text-center foot">
-          <div class="col">
-            <h5>Copyright &copy; 2025 JOHNNY JIANG. All rights reserved.</h5>
-          </div>
+      <div class="footer row text-center">
+        <div class="col">
+          <h5>Copyright &copy; 2025 JOHNNY JIANG. All rights reserved.</h5>
         </div>
       </div>
-      <br />
-    </footer>
+    </div>
 
     <script src="assets/js/menu.js"></script>
     <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
