Fixed empty whitespace

--- a/menu.html
+++ b/menu.html
@@ -101,7 +101,9 @@
       <div id="menu-container"></div>
       <div class="footer row text-center">
         <div class="col">
-          <h5>Copyright &copy; 2025 JOHNNY JIANG. All rights reserved.</h5>
+          <h5>Copyright &copy; 2025 JOHNNY JIANG. 
+            <br /> All rights reserved.
+          </h5>
         </div>
       </div>
     </div>
