Fixed footer wrapping

--- a/menu.html
+++ b/menu.html
@@ -102,7 +102,7 @@
       <div class="footer row text-center">
         <div class="col">
           <h5>Copyright &copy; 2025 JOHNNY JIANG. 
-            <br /> All rights reserved.
+            <span class="wrap-text">All rights reserved.</span>
           </h5>
         </div>
       </div>
