--- a/menu.html
+++ b/menu.html
@@ -50,10 +50,14 @@
           </div>
         </div>
 
+        <div class="scroll-arrow left-arrow" onclick="scrollNav('left')">
+          <i class="fas fa-chevron-left"></i>
+        </div>
+
         <div class="navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" id="nav-breakfast" onclick="jump('breakfast')">Breakfast</a>
+              <a class="nav-link active" id="nav-breakfast" onclick="jump('breakfast')">Breakfast</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="nav-appetizer" onclick="jump('appetizer')">Appetizer</a>
@@ -93,6 +97,11 @@
             </li>
           </ul>
         </div>
+
+        <div class="scroll-arrow right-arrow" onclick="scrollNav('right')">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+    
       </div>
     </nav>
     
