Modal buttons fixed to bottom

--- a/menu.html
+++ b/menu.html
@@ -130,7 +130,7 @@
                 <p id="modal-ingredients"></p>
                 <p id="modal-cuisine"></p>
               </div>
-              <div class="sticky-footer">
+              <div class="modal-buttons">
                 <button id="step-counter">
                   <span id="minus-btn" onclick="updateValue(-1)">-</span>
                   <span id="current-value">1</span>
