Cart icon and styling

--- a/menu.html
+++ b/menu.html
@@ -94,6 +94,13 @@
           </ul>
         </div>
 
+        <div class="cart-container" id="cart-container" onclick="toggleCart()">
+          <div class="cart-icon">
+            <i class="fas fa-shopping-cart"></i>
+          </div>
+          <span id="cart-count" class="badge bg-danger">0</span>
+        </div>
+
       </div>
     </nav>
     
