Header and footer of panels now fixed

--- a/menu.html
+++ b/menu.html
@@ -187,6 +187,11 @@
         <p>Your cart is currently empty.</p>
         <p>Your cart is currently empty.</p>
         <p>Your cart is currently empty.</p>
+        <p>Your cart is currently empty.</p>
+        <p>Your cart is currently empty.</p>
+        <p>Your cart is currently empty.</p>
+        <p>Your cart is currently empty.</p>
+        <p>Your cart is currently empty.</p>
         </div>
       </div>
       <div class="food-panel-footer">
