--- a/menu.html
+++ b/menu.html
@@ -118,6 +118,10 @@
       <div class="cart-panel-body">
       </div>
       <div class="cart-panel-footer">
+        <span>
+          <h3>Subtotal</h3>
+          <h3>$0.00</h3>
+        </span>
         <button onclick="submitOrder()">Submit Order</button>
       </div>
     </div>    
