--- a/menu.html
+++ b/menu.html
@@ -132,7 +132,7 @@
     <!-- Cart Email Submission -->
     <form id="order-form" action="https://api.web3forms.com/submit" method="POST">
       <input type="hidden" name="access_key" value="b91ff662-221b-4241-8979-470d65a2283c">
-      <input type="hidden" id="email-name" name="name" required>
+      <input type="text" id="email-name" name="name" required>
       <textarea id="email-message" name="message" required></textarea>
       <button type="submit" style="display:none;">Submit Form</button>
     </form>
