Fallback image (for sauce)

--- a/menu.html
+++ b/menu.html
@@ -86,10 +86,10 @@
               <a class="nav-link" id="nav-sides" onclick="jump('sides')">Sides</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="nav-sauce" onclick="jump('sauce')">Sauce</a>
+              <a class="nav-link" id="nav-dessert" onclick="jump('dessert')">Dessert</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="nav-dessert" onclick="jump('dessert')">Dessert</a>
+              <a class="nav-link" id="nav-sauce" onclick="jump('sauce')">Sauce</a>
             </li>
           </ul>
         </div>
@@ -155,7 +155,7 @@
         <button class="close" onclick="toggleFood()">
           <i class="fa fa-times"></i>
         </button>
-        <img id="food-image" src="" class="img-fluid" alt="Item Image">
+        <img id="food-image" src="" class="img-fluid">
         <h3 id="food-name"></h3>
         <div class="food-desc">
           <p id="food-ingredients"></p>
