--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,9 @@
           <div class="search-icon" onclick="toggleSearch()">
             <i class="fas fa-search"></i>
           </div>
+          <div class="dropdown-icon">
+            <i class="fas fa-caret-down"></i>
+          </div>
         </div>
 
         <div class="navbar-collapse" id="navbarNav">
