Added a addons section to food panel

--- a/menu.html
+++ b/menu.html
@@ -180,6 +180,7 @@
           <p id="food-price"></p>
           <p id="food-ingredients"></p>
           <p id="food-cuisine"></p>
+          <p id="food-addons"></p>
         </div>
       </div>
       <div class="food-panel-footer">
