--- a/menu.html
+++ b/menu.html
@@ -97,6 +97,9 @@
               <a class="nav-link" id="nav-sandwich" onclick="jump('sandwich')">Sandwich</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" id="nav-soup" onclick="jump('soup')">Soup</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" id="nav-sides" onclick="jump('sides')">Sides</a>
             </li>
             <li class="nav-item">
