--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
       <div class="container-fluid">
         
         <div class="search-container" id="search-container">
-          <input type="text" class="search-input" id="search-input" placeholder="Search...">
+          <input type="text" class="search-input" id="search-input" placeholder="Search..." oninput="searchMenu(this.value)">
           <div class="search-icon" onclick="toggleSearch()">
             <i class="fas fa-search"></i>
           </div>
