Combined search and filter

--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
       <div class="container-fluid">
         
         <div class="search-container" id="search-container">
-          <input type="text" class="search-input" id="search-input" placeholder="Search..." oninput="searchMenu(this.value)">
+          <input type="text" class="search-input" id="search-input" placeholder="Search..." oninput="filterMenu()">
           <div class="search-icon" onclick="toggleSearch()">
             <i class="fas fa-search"></i>
           </div>
@@ -53,14 +53,14 @@
             <i class="fas fa-caret-down"></i>
           </div>
           <div class="dropdown-menu">
-            <label><input type="checkbox" name="American" checked> American</label>
-            <label><input type="checkbox" name="Chinese" checked> Chinese</label>
-            <label><input type="checkbox" name="Fuzhounese" checked> Fuzhounese</label>
-            <label><input type="checkbox" name="Japanese" checked> Japanese</label>
-            <label><input type="checkbox" name="Korean" checked> Korean</label>
-            <label><input type="checkbox" name="Malaysian" checked> Malaysian</label>
-            <label><input type="checkbox" name="Mexican" checked> Mexican</label>
-            <label><input type="checkbox" name="Vietnamese" checked> Vietnamese</label>
+            <label><input type="checkbox" name="American" checked onchange="filterMenu()"> American</label>
+          <label><input type="checkbox" name="Chinese" checked onchange="filterMenu()"> Chinese</label>
+          <label><input type="checkbox" name="Fuzhounese" checked onchange="filterMenu()"> Fuzhounese</label>
+          <label><input type="checkbox" name="Japanese" checked onchange="filterMenu()"> Japanese</label>
+          <label><input type="checkbox" name="Korean" checked onchange="filterMenu()"> Korean</label>
+          <label><input type="checkbox" name="Malaysian" checked onchange="filterMenu()"> Malaysian</label>
+          <label><input type="checkbox" name="Mexican" checked onchange="filterMenu()"> Mexican</label>
+          <label><input type="checkbox" name="Vietnamese" checked onchange="filterMenu()"> Vietnamese</label>
           </div>
         </div>
 
