--- a/menu.html
+++ b/menu.html
@@ -184,7 +184,10 @@
           <p id="food-price"></p>
           <p id="food-ingredients"></p>
           <p id="food-cuisine"></p>
-          <p id="food-addons"></p>
+          <div id="food-addons-container">
+            <h4>Add-ons:</h4>
+            <div id="food-addons"></div>
+          </div>
         </div>
       </div>
       <div class="food-panel-footer">
