Shopping cart tool tip

--- a/menu.html
+++ b/menu.html
@@ -129,6 +129,7 @@
     <div class="cart-panel" id="cart-panel">
       <div class="cart-panel-header">
         Shopping Cart
+        <i class="fa fa-info-circle" data-tooltip="Your order will be sent to my personal email"></i>
         <button class="close" onclick="toggleOverlay()">
           <i class="fa fa-times"></i>
         </button>
