Dynamic footer copyright year

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
         <div class="row text-center foot">
           <div class="col">
-            <h5>Copyright &copy; 2025 JOHNNY JIANG. All rights reserved.</h5>
+            <h5>Copyright &copy; <span id="current-year"></span> JOHNNY JIANG. All Rights Reserved.</h5>
           </div>
         </div>
       </div>
