--- a/menu.html
+++ b/menu.html
@@ -166,7 +166,7 @@
       <div id="menu-container"></div>
       <div class="footer row text-center">
         <div class="col">
-          <h5>Copyright &copy; 2025 JOHNNY JIANG. 
+          <h5>Copyright &copy; <span id="current-year"></span> JOHNNY JIANG. 
             <span class="wrap-text">All rights reserved.</span>
           </h5>
         </div>
