--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <section class="white">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row text-center align-items-center">
           <div class="col">
             <img
@@ -35,23 +35,19 @@
               src="assets/images/main/appicon.png"
               alt=""
               width="200"
-              height="200"
-            />
+              height="200"/>
           </div>
         </div>
-        <div class="row text-center align-items-center">
-          <div class="col"></div>
-          <div class="col">
+        <div class="row text-center align-items-center justify-content-center">
+          <div class="col" style="max-width: 720px;">
             <h1>Privacy Policy</h1>
             <br />
             <p>
               Lunar Birthday use and transfer to any other app of information
               received from Google APIs will adhere to
-              <a
-                href="https://developers.google.com/terms/api-services-user-data-policy"
-                target="_blank"
-                >Google API Services User Data Policy</a
-              >, including the Limited Use requirements.
+              <a href="https://developers.google.com/terms/api-services-user-data-policy" 
+              target="_blank"> Google API Services User Data Policy</a>, 
+              including the Limited Use requirements.
             </p>
             <br />
             <p>
@@ -64,7 +60,6 @@
             <br />
             <p>Copyright &copy; <span id="current-year"></span> JOHNNY JIANG. All Rights Reserved.</p>
           </div>
-          <div class="col"></div>
         </div>
       </div>
     </section>
