--- a/menu.html
+++ b/menu.html
@@ -65,44 +65,7 @@
         </div>
 
         <div class="navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" id="nav-breakfast" onclick="jump('breakfast')">Breakfast</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-appetizer" onclick="jump('appetizer')">Appetizer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-soup" onclick="jump('soup')">Soup</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-noodle" onclick="jump('noodle')">Noodle</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-chicken" onclick="jump('chicken')">Chicken</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-beef" onclick="jump('beef')">Beef</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-pork" onclick="jump('pork')">Pork</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-seafood" onclick="jump('seafood')">Seafood</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-vegetable" onclick="jump('vegetable')">Vegetable</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-sandwich" onclick="jump('sandwich')">Sandwich</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-sides" onclick="jump('sides')">Sides</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-dessert" onclick="jump('dessert')">Dessert</a>
-            </li>
-          </ul>
+          <ul class="navbar-nav"></ul>
         </div>
 
         <div class="cart-container" id="cart-container" onclick="toggleCart()">
