Cooking notes tooltip

--- a/menu.html
+++ b/menu.html
@@ -120,11 +120,31 @@
     <!-- Food Section -->
     <div class="container">
       <div id="menu-container"></div>
-      <div class="footer row text-center">
-        <div class="col">
-          <h5>Copyright &copy; <span id="current-year"></span> JOHNNY JIANG. 
-            <span class="wrap-text">All rights reserved.</span>
-          </h5>
+      <div class="footer text-center">
+        <div class="row">
+          <div class="col">
+            <i class="fas fa-info-circle info-icon"></i>
+            <div class="info-popup">
+              <h3>Cooking Notes</h3>
+              <p><strong>Heat Levels: </strong>Normal: Medium, Simmer: Med-Low, Boil: High</p>
+              <p><strong>Baking Temperatures: </strong>Pastries: 350°F, Meat/Potatoes: 400°F</p>
+              <p><strong>Essential Seasoning: </strong>Garlic powder, onion powder, and paprika</p>
+              <p><strong>Storing Meat: </strong> Opened meat can be stored max 4 days in the fridge</p>
+              <p><strong>Deep Fried: </strong>Consider deep frying twice for extra crispiness</p>
+              <p><strong>Cheese Melting: </strong>To melt cheese on top, use broil or toast</p>
+              <p><strong>Wok Skills: </strong>Pull wok up (L) and push food forward with pan (R)</p>
+              <p><strong>Butter Substitutes: </strong>Replace with 3/4 oil</p>
+              <p><strong>Corn Starch Substitutes: </strong>Replace with 2x flour</p>
+              <p><strong>Heavy Cream Substitutes: </strong>Use a 3:1 ratio of milk to butter</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h5>Copyright &copy; <span id="current-year"></span> JOHNNY JIANG. 
+              <span class="wrap-text">All rights reserved.</span>
+            </h5>
+          </div>
         </div>
       </div>
     </div>
