Cooking notes dynamically added

--- a/menu.html
+++ b/menu.html
@@ -124,19 +124,7 @@
         <div class="row">
           <div class="col">
             <i class="fas fa-info-circle info-icon"></i>
-            <div class="info-popup">
-              <h3>Cooking Notes</h3>
-              <p><strong>Heat Levels: </strong>Normal: Medium, Simmer: Med-Low, Boil: High</p>
-              <p><strong>Baking Temperatures: </strong>Pastries: 350°F, Meat/Potatoes: 400°F</p>
-              <p><strong>Essential Seasoning: </strong>Garlic powder, onion powder, and paprika</p>
-              <p><strong>Storing Meat: </strong> Opened meat can be stored max 4 days in the fridge</p>
-              <p><strong>Deep Fried: </strong>Consider deep frying twice for extra crispiness</p>
-              <p><strong>Cheese Melting: </strong>To melt cheese on top, use broil or toast</p>
-              <p><strong>Wok Skills: </strong>Pull wok up (L) and push food forward with pan (R)</p>
-              <p><strong>Butter Substitutes: </strong>Replace with 3/4 oil</p>
-              <p><strong>Corn Starch Substitutes: </strong>Replace with 2x flour</p>
-              <p><strong>Heavy Cream Substitutes: </strong>Use a 3:1 ratio of milk to butter</p>
-            </div>
+            <div class="info-popup"></div>
           </div>
         </div>
         <div class="row">
